--- a/portfolio.html
+++ b/portfolio.html
@@ -74,6 +74,11 @@
             <li class="list-card">
               <a class="list card link-card" href="#"
                 ><img class="card-image" src="./images/techno.jpg" alt="Технокряк" width="370" />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -89,6 +94,11 @@
                   alt="Постер New Orlean vs Golden Star"
                   width="370"
                 />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -105,6 +115,11 @@
                   alt="Ресторан Seafood"
                   width="370"
                 />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="portfolio-text">Додаток</p>
@@ -114,6 +129,11 @@
             <li class="list-card">
               <a class="list card link-card" href="#"
                 ><img class="card-image" src="./images/prime.jpg" alt="Проєкт Prime" width="370" />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">Проєкт <span lang="en">Prime</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -123,6 +143,11 @@
             <li class="list-card">
               <a class="list card link-card" href="#"
                 ><img class="card-image" src="./images/boxes.jpg" alt="Проєкт Boxe" width="370" />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="portfolio-text">Додаток</p>
@@ -137,6 +162,11 @@
                   alt="Inspiration has no Borders"
                   width="370"
                 />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">
                     <span lang="en">Inspiration has no Borders</span>
@@ -153,6 +183,11 @@
                   alt="Видання Limited Edition"
                   width="370"
                 />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -162,6 +197,11 @@
             <li class="list-card">
               <a class="list card link-card" href="#"
                 ><img class="card-image" src="./images/lab.jpg" alt="Проєкт LAB" width="370" />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">Проєкт <span lang="en">LAB</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -176,6 +216,11 @@
                   alt="Growing Business"
                   width="370"
                 />
+                <p class="modal-card">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
+                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
+                  особу.
+                </p>
                 <div class="box-card">
                   <h2 class="portfolio-title">Growing <span lang="en">Business</span></h2>
                   <p class="portfolio-text">Додаток</p>
@@ -250,5 +295,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
