--- a/portfolio.html
+++ b/portfolio.html
@@ -72,13 +72,15 @@
 
           <ul class="list card-portfolio">
             <li class="list-card">
-              <a class="list card link-card" href="#"
-                ><img class="card-image" src="./images/techno.jpg" alt="Технокряк" width="370" />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+              <a class="list card link-card" href="#">
+                <div class="overlay-card">
+                  <img class="card-image" src="./images/techno.jpg" alt="Технокряк" width="370" />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">Технокряк</h2>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -87,18 +89,20 @@
             </li>
 
             <li class="list-card">
-              <a class="list card link-card" href="#"
-                ><img
-                  class="card-image"
-                  src="./images/poster.jpg"
-                  alt="Постер New Orlean vs Golden Star"
-                  width="370"
-                />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+              <a class="list card link-card" href="#">
+                <div class="overlay-card">
+                  <img
+                    class="card-image"
+                    src="./images/poster.jpg"
+                    alt="Постер New Orlean vs Golden Star"
+                    width="370"
+                  />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">
                     Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -108,18 +112,20 @@
               </a>
             </li>
             <li class="list-card">
-              <a class="list card link-card" href="#"
-                ><img
-                  class="card-image"
-                  src="./images/restourant.jpg"
-                  alt="Ресторан Seafood"
-                  width="370"
-                />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+              <a class="list card link-card" href="#">
+                <div class="overlay-card">
+                  <img
+                    class="card-image"
+                    src="./images/restourant.jpg"
+                    alt="Ресторан Seafood"
+                    width="370"
+                  />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="portfolio-text">Додаток</p>
@@ -127,13 +133,15 @@
               </a>
             </li>
             <li class="list-card">
-              <a class="list card link-card" href="#"
-                ><img class="card-image" src="./images/prime.jpg" alt="Проєкт Prime" width="370" />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+              <a class="list card link-card" href="#">
+                <div class="overlay-card">
+                  <img class="card-image" src="./images/prime.jpg" alt="Проєкт Prime" width="370" />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">Проєкт <span lang="en">Prime</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -141,13 +149,15 @@
               </a>
             </li>
             <li class="list-card">
-              <a class="list card link-card" href="#"
-                ><img class="card-image" src="./images/boxes.jpg" alt="Проєкт Boxe" width="370" />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+              <a class="list card link-card" href="#">
+                <div class="overlay-card">
+                  <img class="card-image" src="./images/boxes.jpg" alt="Проєкт Boxe" width="370" />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="portfolio-text">Додаток</p>
@@ -155,18 +165,20 @@
               </a>
             </li>
             <li class="list-card">
-              <a class="list card link-card" href="#"
-                ><img
-                  class="card-image"
-                  src="./images/inspiration.jpg"
-                  alt="Inspiration has no Borders"
-                  width="370"
-                />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+              <a class="list card link-card" href="#">
+                <div class="overlay-card">
+                  <img
+                    class="card-image"
+                    src="./images/inspiration.jpg"
+                    alt="Inspiration has no Borders"
+                    width="370"
+                  />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">
                     <span lang="en">Inspiration has no Borders</span>
@@ -176,18 +188,20 @@
               </a>
             </li>
             <li class="list-card">
-              <a class="list card link-card" href="#"
-                ><img
-                  class="card-image"
-                  src="./images/magazin.jpg"
-                  alt="Видання Limited Edition"
-                  width="370"
-                />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+              <a class="list card link-card" href="#">
+                <div class="overlay-card">
+                  <img
+                    class="card-image"
+                    src="./images/magazin.jpg"
+                    alt="Видання Limited Edition"
+                    width="370"
+                  />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="portfolio-text">Дизайн</p>
@@ -195,13 +209,15 @@
               </a>
             </li>
             <li class="list-card">
-              <a class="list card link-card" href="#"
-                ><img class="card-image" src="./images/lab.jpg" alt="Проєкт LAB" width="370" />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+              <a class="list card link-card" href="#">
+                <div class="overlay-card">
+                  <img class="card-image" src="./images/lab.jpg" alt="Проєкт LAB" width="370" />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">Проєкт <span lang="en">LAB</span></h2>
                   <p class="portfolio-text">Маркетинг</p>
@@ -210,17 +226,19 @@
             </li>
             <li class="list-card">
               <a class="list card link-card" href="#">
-                <img
-                  class="card-image"
-                  src="./images/busines.jpg"
-                  alt="Growing Business"
-                  width="370"
-                />
-                <p class="modal-card">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів. Все
-                  це дозволить відвідувачу отримати вичерпні відомості про компанію чи приватну
-                  особу.
-                </p>
+                <div class="overlay-card">
+                  <img
+                    class="card-image"
+                    src="./images/busines.jpg"
+                    alt="Growing Business"
+                    width="370"
+                  />
+                  <p class="modal-card">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                    Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                    приватну особу.
+                  </p>
+                </div>
                 <div class="box-card">
                   <h2 class="portfolio-title">Growing <span lang="en">Business</span></h2>
                   <p class="portfolio-text">Додаток</p>
