--- a/index.html
+++ b/index.html
@@ -433,9 +433,16 @@
         </div>
       </div>
     </footer>
+
+    <!-- modal -->
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="button-modal" type="button" data-modal-close></button>
+        <button class="button-modal" type="button" data-modal-close>
+          <svg class="icon-close-modal" width="18" heihht="18">
+            <use href="./images/sprite.svg#close-black"></use>
+          </svg>
+        </button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
