--- a/index.html
+++ b/index.html
@@ -439,8 +439,8 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="button-modal" type="button" data-modal-close>
-          <svg class="icon-close-modal" width="18" heihht="18">
-            <use href="./images/sprite.svg#close-black"></use>
+          <svg class="icon-close-modal" width="11" height="11">
+            <use href="./images/sprite.svg#close-vector"></use>
           </svg>
         </button>
       </div>
